# vllm-observer

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
compose/: docker-compose.yml
dashboard/: app.js  display.js  index.html  styles.css
dashboard/js/: api.js  app.js  chart.js  render.js  time.js
docker/: docker-compose.files.yml
docs/: AGENT_GUIDE.md  FUTURE_IMPROVEMENTS.md  HANDOFF.md
observer/: __init__.py  collector.py  parser.py  prometheus.py  sampler.py  server.py
tests/: test_collector.py  test_parser.py  test_sampler.py  test_server.py
